GNOME Bugzilla – Bug 754776
Fix a g-i annotation
Last modified: 2015-09-15 11:47:10 UTC
soup-uri.c: Add (allow-none) to soup_uri_normalize
Created attachment 310973 [details] [review] soup-uri.c: Add (allow-none) to soup_uri_normalize Align annotation with documentation which says NULL is fine for the second parameter.
Review of attachment 310973 [details] [review]: sure
Attachment 310973 [details] pushed as ba3c50e - soup-uri.c: Add (allow-none) to soup_uri_normalize