soup-uri.c: Add (allow-none) to soup_uri_normalize

Align annotation with documentation which says NULL is fine for the
second parameter.

https://bugzilla.gnome.org/show_bug.cgi?id=754776